# datafrey

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
plugins/claude-code/: .mcp.json  LICENSE  README.md
plugins/claude-code/.claude-plugin/: marketplace.json  plugin.json
plugins/claude-code/skills/db/: SKILL.md
